--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,15 +1,23 @@
 # https://gist.github.com/tsl0922/d79fc1f8097dde660b34
 
-" to prevent delay when switching to normal mode in vim
+## On the server
+#cd ~
+#rm .vimrc
+#wget https://raw.githubusercontent.com/nikolayivanovivanov/dotfiles_server/main/.vimrc
+#mkdir ~/.vim/tmp
+#rm .tmux.conf
+#wget https://raw.githubusercontent.com/nikolayivanovivanov/dotfiles_server/main/.tmux.conf
+
+# to prevent delay when switching to normal mode in vim
 set -sg escape-time 0
 
 # vim style tmux config
 
 # use C-a, since it's on the home row and easier to hit than C-b
-set-option -g prefix C-a
-unbind-key C-a
-bind-key C-a send-prefix
-set -g base-index 1
+#set-option -g prefix C-a
+#unbind-key C-a
+#bind-key C-a send-prefix
+#set -g base-index 1
 
 # Easy config reload
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
@@ -81,10 +89,10 @@ bind-key -T copy-mode-vi escape send-keys -X cancel
 set-option -g status-interval 1
 set-option -g status-style bg=black
 set-option -g status-style fg=white
-set -g status-left '#[fg=yellow]#H #[default]'
+set -g status-left '#[fg=green]#H #[default]'
 # set -g status-right '%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
 
-set-option -g pane-active-border-style fg=yellow
+set-option -g pane-active-border-style fg=green
 set-option -g pane-border-style fg=default
 
 # Set window notifications
