--- a/.tmux.conf
+++ b/.tmux.conf
@@ -89,10 +89,11 @@ bind-key -T copy-mode-vi escape send-keys -X cancel
 set-option -g status-interval 1
 set-option -g status-style bg=black
 set-option -g status-style fg=white
-set -g status-left '#[fg=green]#H #[default]'
+set -g status-left '#[fg=yellow]#H #[default]'
 # set -g status-right '%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
+set -g status-right 'Sess: #{continuum_status}'
 
-set-option -g pane-active-border-style fg=green
+set-option -g pane-active-border-style fg=yellow
 set-option -g pane-border-style fg=default
 
 # Set window notifications
@@ -105,17 +106,16 @@ set -g visual-activity on
 # Allow the arrow key to be used immediately after changing windows
 set-option -g repeat-time 0
 
-
-
-
-
-
-
-
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
+# automatically restore tmux session on server start
+set -g @continuum-restore 'on'
+set -g @resurrect-save 'S'
+set -g @resurrect-restore 'R'
 
 
 
