--- a/.tmux.conf
+++ b/.tmux.conf
@@ -115,7 +115,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 # automatically restore tmux session on server start
 set -g @continuum-restore 'on'
 set -g @resurrect-save 'S'
-set -g @resurrect-restore 'R'
+set -g @resurrect-restore 'L'
 
 
 
