--- a/.tmux.conf
+++ b/.tmux.conf
@@ -66,11 +66,13 @@ bind-key C-o rotate-window
 
 bind-key a last-pane
 bind-key C-a last-pane
-bind-key q display-panes
+bind-key c confirm kill-pane
 
-bind-key c new-window
+# Windows are tabs
+bind-key n new-window
 bind-key t next-window
 bind-key T previous-window
+bind-key q confirm kill-window
 
 bind-key v copy-mode
 bind-key p paste-buffer
@@ -89,7 +91,7 @@ bind-key -T copy-mode-vi escape send-keys -X cancel
 set-option -g status-interval 1
 set-option -g status-style bg=black
 set-option -g status-style fg=white
-set -g status-left '#[fg=yellow]#H #[default]'
+set -g status-left '#[fg=green]#H #[default]'
 # set -g status-right '%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
 set -g status-right 'Sess: #{continuum_status}'
 
@@ -113,6 +115,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # automatically restore tmux session on server start
+set -g @continuum-save-interval '5'
 set -g @continuum-restore 'on'
 set -g @resurrect-save 'S'
 set -g @resurrect-restore 'L'
@@ -121,4 +124,3 @@ set -g @resurrect-restore 'L'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
