--- a/.tmux.conf
+++ b/.tmux.conf
@@ -115,12 +115,18 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # automatically restore tmux session on server start
-set -g @continuum-save-interval '5'
-set -g @continuum-restore 'on'
+# Sometimes it fails to ressurrect and I can't start tmux
+# Better resurrect manually via "previx L" 
+# set -g @continuum-save-interval '5'
+# set -g @continuum-restore 'on'
 set -g @resurrect-save 'S'
 set -g @resurrect-restore 'L'
+
+# previx s - list sessions
+# in the list Enter to restore the session, "x" to kill the selected session
 
 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
