--- a/.tmux.conf
+++ b/.tmux.conf
@@ -91,10 +91,13 @@ bind-key -T copy-mode-vi escape send-keys -X cancel
 set-option -g status-interval 1
 set-option -g status-style bg=black
 set-option -g status-style fg=white
-set -g status-left '#[fg=green]#H #[default]'
+set -g status-left '#[fg=white]#H | #[default]'
 # set -g status-right '%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
-set -g status-right 'Sess: #{continuum_status}'
+# set -g status-right 'Sess: #{continuum_status}'
+set -g status-right 'Sess: Ctrl-b S; Ctlr-b L'
 
+set-window-option -g window-status-current-style fg=green
+# set-window-option -g window-status-current-style bg=green
 set-option -g pane-active-border-style fg=yellow
 set-option -g pane-border-style fg=default
 
